# XBSX2

./: .gitignore  .gitmodules  CMakeLists.txt  PCSX2_qt.sln  PCSX2_uwp.sln  README.md
cmake/: BuildParameters.cmake  SearchForStuff.cmake
common/: CMakeLists.txt  Exceptions.cpp  FileSystem.cpp  HTTPDownloader.cpp  HTTPDownloaderCurl.cpp  HTTPDownloaderCurl.h  HTTPDownloaderWinHTTP.cpp  PageFaultSource.h  RedtapeWindows.h  TextureDecompress.h  ThreadPool.cpp  ThreadPool.h  WindowInfo.h  ZipHelpers.h  common.vcxproj  common.vcxproj.filters
common/Windows/: WinHostSys.cpp  WinMisc.cpp  WinThreads.cpp
common/vsprops/: BaseProjectConfig.props  BaseProperties.props  CodeGen.props  ProjectConfigAVX2.props  Targets.props  WinSDK.props
pcsx2/: CMakeLists.txt  Config.h  Counters.cpp  GameDatabase.cpp  GameDatabase.h  Host.h  IopBios.cpp  MTGS.cpp  MTVU.cpp  MemoryCardFile.cpp  Pcsx2Config.cpp  R5900.cpp  R5900.h  SaveState.cpp  VMManager.cpp  VMManager.h  VU1micro.cpp  Vif1_Dma.cpp  Vif1_MFIFO.cpp  pcsx2.vcxproj  pcsx2.vcxproj.filters  pcsx2core.vcxproj  pcsx2core.vcxproj.filters
pcsx2-nogui/: CMakeLists.txt  Main.cpp  NoGUIHost.cpp  NoGUIHost.h  NoGUIPlatform.h  PrecompiledHeader.h  WaylandNoGUIPlatform.cpp  WaylandNoGUIPlatform.h  Win32KeyNames.h  Win32NoGUIPlatform.cpp  Win32NoGUIPlatform.h  pcsx2-nogui.vcxproj  pcsx2-nogui.vcxproj.filters
pcsx2-qt/: DisplayWidget.cpp  EmuThread.cpp  EmuThread.h  MainWindow.cpp  MainWindow.h  QtHost.cpp
pcsx2-qt/Settings/: ControllerGlobalSettingsWidget.cpp  ControllerGlobalSettingsWidget.ui  GraphicsSettingsWidget.cpp  GraphicsSettingsWidget.ui
pcsx2-uwp/: Package.appxmanifest  UWPKeyNames.h  UWPNoGUIPlatform.cpp  UWPNoGUIPlatform.h  pcsx2-uwp.vcxproj  pcsx2-uwp.vcxproj.filters  pcsx2-uwp_TemporaryKey.pfx  svnrev.h
pcsx2-uwp/resources/: GameIndex.yaml
pcsx2-uwp/resources/shaders/dx11/: tfx.fx
pcsx2-uwp/resources/shaders/opengl/: convert.glsl  tfx_fs.glsl
pcsx2/CDVD/: GzippedFileReader.cpp  ThreadedFileReader.cpp
pcsx2/CDVD/Windows/: DriveUtility.cpp  IOCtlSrc.cpp
pcsx2/DEV9/: ConfigUI.cpp  DEV9.cpp
pcsx2/DEV9/ATA/: ATA.h
pcsx2/DEV9/InternalServers/: DHCP_Server.cpp
pcsx2/DEV9/PacketReader/: NetLib.cpp
pcsx2/DEV9/Sessions/ICMP_Session/: ICMP_Session.cpp
pcsx2/DEV9/Win32/: pcap_io_win32.cpp  tap-win32.cpp
pcsx2/Frontend/: Achievements.cpp  Achievements.h  D3D11HostDisplay.cpp  D3D12HostDisplay.cpp  FullscreenUI.cpp  GameList.cpp  GameList.h  ImGuiFullscreen.cpp  ImGuiManager.cpp  InputManager.cpp  InputManager.h  Win32RawInputSource.cpp  Win32RawInputSource.h
pcsx2/GS/: GS.cpp  GSCapture.cpp  GSCapture.h  GSClut.cpp  GSState.cpp  GSState.h  GSUtil.cpp  GSUtil.h
pcsx2/GS/Renderers/Common/: GSDevice.h  GSRenderer.cpp  GSTexture.h
pcsx2/GS/Renderers/DX11/: GSDevice11.cpp  GSTextureFX11.cpp
pcsx2/GS/Renderers/DX12/: GSDevice12.cpp
pcsx2/GS/Renderers/HW/: GSRendererHW.cpp  GSRendererHW.h  GSTextureCache.cpp  GSTextureReplacementLoaders.cpp  GSTextureReplacements.cpp
pcsx2/GS/Renderers/OpenGL/: GLLoader.cpp  GLLoader.h  GSDeviceOGL.cpp  GSDeviceOGL.h  GSTextureOGL.cpp
pcsx2/GS/Renderers/SW/: GSRendererSW.cpp
pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp
pcsx2/GS/Window/: GSCaptureDlg.cpp  GSCaptureDlg.h  GSSetting.cpp  GSwxDialog.cpp
pcsx2/IPU/mpeg2lib/: Mpeg.cpp
pcsx2/PAD/Host/: Global.h  PAD.cpp  PAD.h
pcsx2/SPU2/Host/: Config.cpp
pcsx2/SPU2/Windows/: SndOut_XAudio2.cpp
pcsx2/USB/usb-eyetoy/: jo_mpeg.cpp
pcsx2/gui/: wxDirName.h
pcsx2/windows/: FlatFileReaderWindows.cpp
pcsx2/x86/: iCore.cpp  iR3000Atables.cpp
pcsx2/x86/ix86-32/: iR5900MultDiv.cpp  recVTLB.cpp
